--- a/public/pages/common/page-header.html
+++ b/public/pages/common/page-header.html
@@ -1,4 +1,5 @@
 <div>
+    <h2>This is the header</h2>
     <div class="ng-scope layout-row">
         <div class="flex">First item in row</div>
         <div class="flex-20">Second item in row</div>
