Minor css changes. Basic directive working

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,3 +1,8 @@
-<div>
-    Welcome to the home page
-</div>
+<div>here</div>
+<section-nav-btn
+        heading="3-in-1"
+        image=""
+        text="St. Martin's Church (Horsley 3-in-1)">
+</section-nav-btn>
+
+
