--- a/public/features/common/page-header.html
+++ b/public/features/common/page-header.html
@@ -1,4 +1,4 @@
-<div>
+<div class="common-hdr-l1">
     <h2>This is the header</h2>
     <div class="ng-scope layout-row">
         <div class="flex">First item in row</div>
