parallax formatting and bug fixes

--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -1,6 +1,6 @@
 <div>
     <div class="page-banner">
-        <div class="text-content title">title:{{hpc.config.title}}</div>
+        <div class="text-content title">{{hpc.config.title}}</div>
         <div class="text-content subtitle">{{hpc.config.subtitle}}</div>
     </div>
 
@@ -11,5 +11,3 @@
     </section-nav-btn>
 
 </div>
-
-here: {{hpc.config}}
