More work on page layout and directives

--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -3,11 +3,50 @@
         <div class="text-content title">{{hpc.config.title}}</div>
         <div class="text-content subtitle">{{hpc.config.subtitle}}</div>
     </div>
-here: {{hpc.links}}
-    <section-nav-btn
-            heading="{{hpc.links[0].heading}}"
-            image="{{hpc.links[0].image}}"
-            text="{{hpc.links[0].text}}">
-    </section-nav-btn>
+
+    <div class="flex-container">
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+
+        <section-nav-btn
+                heading="{{hpc.links[0].heading}}"
+                image="{{hpc.links[0].image}}"
+                text="{{hpc.links[0].text}}">
+        </section-nav-btn>
+    </div>
 
 </div>
