New page-loader directive

--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -3,11 +3,15 @@
         <div class="text-content title">{{hpc.config.title}}</div>
         <div class="text-content subtitle">{{hpc.config.subtitle}}</div>
     </div>
-here: {{hpc.links}}
-    <section-nav-btn
-            heading="{{hpc.links[0].heading}}"
-            image="{{hpc.links[0].image}}"
-            text="{{hpc.links[0].text}}">
-    </section-nav-btn>
+    <div class="flexWrap">
+        <div ng-repeat="link in hpc.links">
+            <section-nav-btn
+                    heading="{{link.heading}}"
+                    icon="{{link.icon}}"
+                    text="{{link.text}}"
+                    link="{{link.link}}">
+            </section-nav-btn>
+        </div>
+    </div>
 
 </div>
