--- a/public/features/history/history.html
+++ b/public/features/history/history.html
@@ -1,6 +1,6 @@
 <page-loader
-        title="{{hc.title}}"
-        subtitle="{{hc.subtitle}}"
-        feature="{{hc.feature}}"
-        pages="{{hc.pages}}">
+        heading="hc.title"
+        subheading="hc.subtitle"
+        feature="hc.feature"
+        pages="hc.pages">
 </page-loader>
