parallax using javascript

--- a/public/features/common/header.html
+++ b/public/features/common/header.html
@@ -1,17 +1,25 @@
-<div class="parallax__layer parallax__layer--minus-200">
-    <div class="hdr-para-layer0"></div>
-</div>
-
-<div class="parallax__layer parallax__layer--minus-150">
-    <div class="hdr-para-layer1"></div>
-</div>
-
-<div class="parallax__layer parallax__layer--minus-80">
-    <div class="hdr-para-layer2"></div>
-</div>
-
-<div class="parallax__layer parallax__layer--0">
-    <div class="hdr-para-layer3">
-    </div>
+<div class="wrapper">
+    <main>
+        <section class="module parallax parallax-0">
+            <div class="container">
+                <h1>Motion</h1>
+            </div>
+        </section>
+        <section class="module parallax parallax-1">
+            <div class="container">
+                <h1>Motion</h1>
+            </div>
+        </section>
+        <section class="module parallax parallax-2">
+            <div class="container">
+                <h1>Motion</h1>
+            </div>
+        </section>
+        <section class="module parallax parallax-3">
+            <div class="container">
+                <h1>Motion</h1>
+            </div>
+        </section>
+    </main>
 </div>
 
