history pages complete

--- a/public/features/common/header.html
+++ b/public/features/common/header.html
@@ -1,25 +1,8 @@
-<div class="wrapper">
-    <main>
-        <section class="module parallax parallax-0">
-            <div class="container">
-                <h1>Motion</h1>
-            </div>
-        </section>
-        <section class="module parallax parallax-1">
-            <div class="container">
-                <h1>Motion</h1>
-            </div>
-        </section>
-        <section class="module parallax parallax-2">
-            <div class="container">
-                <h1>Motion</h1>
-            </div>
-        </section>
-        <section class="module parallax parallax-3">
-            <div class="container">
-                <h1>Motion</h1>
-            </div>
-        </section>
-    </main>
+<div class="hdr-container">
+    <div class="flex-container">
+        <div class="parallax parallax-0"></div>
+        <div class="parallax parallax-1"></div>
+        <div class="parallax parallax-2"></div>
+    </div>
 </div>
 
