--- a/public/features/common/page-footer.html
+++ b/public/features/common/page-footer.html
@@ -1,3 +1,5 @@
-<div class="ftr-container">
-    This is the footer
+<div class="footer">
+    <div class="footer-container">
+        This is the footer
+    </div>
 </div>
