--- a/public/features/side-menu/side-menu.html
+++ b/public/features/side-menu/side-menu.html
@@ -1,10 +1,23 @@
+<div class="hmenu">
+    <div class="hmenu-tab" ng-click="smc.redirect('/')">
+        <div class="hmenu-tab-title">Home</div>
+    </div>
+</div>
 <div class="smenu">
     <div class="smenu-box" ng-class="{'show': smc.displayed}">
         <div class="smenu-tab" ng-click="smc.toggleMenu()">
             <div class="smenu-tab-title">{{smc.tabTitle}}</div>
         </div>
         <div class="smenu-content">
-            Stuff goes here
+            <div ng-repeat="link in smc.links">
+                <section-nav-btn
+                        heading="{{link.heading}}"
+                        title="{{link.title}}"
+                        image="{{link.image}}"
+                        text="{{link.text}}"
+                        link="{{link.link}}">
+                </section-nav-btn>
+            </div>
         </div>
     </div>
 </div>
