--- a/public/features/common/header.html
+++ b/public/features/common/header.html
@@ -1,4 +1,7 @@
 <div class="hdr-container">
+    <div>
+        <main-toolbar></main-toolbar>
+    </div>
     <div class="flex-container">
         <div class="parallax parallax-0"></div>
         <div class="parallax parallax-1"></div>
