--- a/public/features/login/login.html
+++ b/public/features/login/login.html
@@ -1,23 +1,25 @@
 <div class="flex-container flex-container-row">
-    <div>
-        <br>
+    <div class="login-form">
         <h2>Login</h2>
-        <form name="form" ng-submit="log.login()" role="form">
+        <form name="form" ng-submit="lc.login()" role="form">
             <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" class="form-control" ng-model="log.username" required />
+                <label for="username">Email Address</label>
+                <input type="text" name="username" id="username" class="form-control" ng-model="lc.username"
+                       required ng-click="lc.resetErrors()" />
                 <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
             </div>
             <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" class="form-control" ng-model="log.password" required />
+                <input type="password" name="password" id="password" class="form-control" ng-model="lc.password"
+                       required ng-click="lc.resetErrors()"/>
                 <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
             </div>
             <div class="form-actions">
-                <button ng-disabled="form.$invalid || log.dataLoading" class="btn btn-primary">Login</button>
-                <img ng-if="log.dataLoading" src="" />
+                <button ng-disabled="form.$invalid || lc.dataLoading" class="btn btn-default">Login</button>
+                <img ng-if="lc.dataLoading" src="" />
                 <a href="#/register" class="btn btn-link">Register</a>
             </div>
         </form>
+        <div ng-if="lc.errMsg" class="text-danger">{{lc.errMsg}}</div>
     </div>
 </div>
