--- a/public/features/login/login.html
+++ b/public/features/login/login.html
@@ -17,7 +17,7 @@
             <div class="form-actions">
                 <button ng-disabled="form.$invalid || lc.dataLoading" class="btn btn-default">Login</button>
                 <img ng-if="lc.dataLoading" src="" />
-                <a href="#/register" class="btn btn-link">Register</a>
+                <!--<a href="#/register" class="btn btn-link">Register</a>-->
             </div>
         </form>
         <div ng-if="lc.errMsg" class="text-danger">{{lc.errMsg}}</div>
