--- a/public/features/parish-council/parish-council.html
+++ b/public/features/parish-council/parish-council.html
@@ -6,7 +6,7 @@
     <div layout="row" style="display: flex; width: 900px; margin: 0 auto;">
             <div flex="33">First item in column</div>
             <div flex="33">
-                <div class="btn btn-sm btn-default" ngf-select="pcc.upload($file)">Upload minutes</div>
+                <div class="btn btn-sm btn-default" ngf-select="pcc.uploadMinutes($file)">Upload minutes</div>
             </div>
         </div>
     </div>
