PC changes (added tabs). Fixed Calendar errors. Added new documents types for PC

--- a/public/features/parish-council/parish-council.html
+++ b/public/features/parish-council/parish-council.html
@@ -1,14 +1,6 @@
-
-<div>
-    <div class="page-banner">
-        <div class="text-content title">{{pcc.config.title}}</div>
-    </div>
-    <div layout="row" style="display: flex; width: 900px; margin: 0 auto;">
-            <div flex="33">First item in column</div>
-            <div flex="33">
-                <div class="btn btn-sm btn-default" ngf-select="pcc.uploadMinutes($file)">Upload minutes</div>
-            </div>
-        </div>
-    </div>
-</div>
-Here: {{pcc.file}}
+<page-loader
+        heading="pcc.title"
+        subheading="pcc.subtitle"
+        feature="pcc.feature"
+        pages="pcc.pages">
+</page-loader>
