WIP. Bug in DocumentTypeTransformer, which needs to be fixed

--- a/public/features/parish-council/parish-council-home.html
+++ b/public/features/parish-council/parish-council-home.html
@@ -1,26 +1,5 @@
-<div>
-    <div layout="row" style="display: flex; width: 900px; margin: 0 auto;">
-            <div flex="33"></div>
-            <div flex="33">
-
-                <div class="btn-sm pc_btn_link" ngf-select="pcc.uploadMinutes($file)">
-                    Upload Minutes <i class="material-icons">file_upload</i>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div style="width: 550px;">
-        <h1 class="text-center">{{ pcc.calendarTitle }}</h1>
-        <ng-include src="'web/plugins/calendar/calendarControls.html'"></ng-include>
-        <mwl-calendar
-                events="pcc.events"
-                view="pcc.calendarView"
-                view-date="pcc.viewDate"
-                cell-is-open="pcc.cellIsOpen"
-                cell-auto-open-disabled="true"
-                view-title="pcc.calendarTitle"
-                on-timespan-click="pcc.timespanClicked(calendarDate, calendarCell)">
-        </mwl-calendar>
+<div class="text-content flex-container flex-container-row">
+    <div class="text-block">
+        Some general stuff about PCs
     </div>
 </div>
