Removed HalBuilder and replaced with Dtos.

--- a/public/features/parish-council/parish-council-accounts.html
+++ b/public/features/parish-council/parish-council-accounts.html
@@ -1,40 +1,66 @@
+<div ng-controller="ParishCouncilController as pcc">
+    <div class="flex-container flex-container-row">
+        <div class="flex-container-row pc-docs primary-border">
+            <div class="primary-title">Account Documents</div>
+            <div class="primary-body pc-docs-list">list here</div>
+        </div>
 
-<div class="flex-container flex-container-row">
-    <div class="flex-container-row pc-docs primary-border">
-        <div class="primary-title">Account Documents</div>
-        <div class="primary-body pc-docs-list">list here</div>
-    </div>
-    <div class="flex-container-row pc-docs-form admin-border">
-        <div class="admin-title">Upload New Document</div>
-        <div class="admin-body pc-docs-list">
-            <div class="pc-doc-form">
-                <form name="form" ng-submit="pcc.upload" role="form">
-                    <div class="form-group" ng-class="{ 'has-error': form.filename.$dirty && form.filename.$error.required }">
-                        <label for="filename">File Name</label>
-                        <input type="text" name="filename" id="filename" class="form-control" ng-model="pcc.filename"
-                               required ng-click="pcc.resetErrors()" />
-                        <span ng-show="form.filename.$dirty && form.filename.$error.required" class="help-block">File name is required</span>
-                    </div>
-                    <div class="form-group" ng-class="{ 'has-error': form.group.$dirty && form.group.$error.required }">
-                        <label for="group">Group Name (e.g. 2016/17)</label>
-                        <input type="text" name="group" id="group" class="form-control" ng-model="pcc.group"
-                               required ng-click="pcc.resetErrors()" />
-                        <span ng-show="form.group.$dirty && form.group.$error.required" class="help-block">Group name is required</span>
-                    </div>
-                    <div class="form-group" ng-class="{ 'has-error': form.docType.$dirty && form.docType.$error.required }">
-                        <label for="docType">Document Type</label>
-                        <select name="docType" id="docType" class="form-control" ng-model="pcc.docType"
-                                required ng-click="pcc.resetErrors()" />
-                        <span ng-show="form.docType.$dirty && form.docType.$error.required" class="help-block">Document Type is required</span>
-                    </div>
+        <div class="flex-container-row pc-docs-form admin-border">
+            <div class="admin-title">Upload New Document</div>
+            <div class="admin-body pc-docs-list">
+                <div class="pc-doc-form">
+                    <form name="form" role="form">
 
-                    <div class="form-actions">
-                        <button ng-disabled="form.$invalid || pcc.dataLoading" class="btn btn-sm btn-default pc-btn-link" ngf-select="pcc.uploadAccountDocument($file)">
-                            Upload Document <i class="material-icons">file_upload</i>
-                        </button>
-                    </div>
+                        <div class="form-group" ng-class="{ 'has-error': form.accountUploadDocName.$dirty && form.accountUploadDocName.$error.required }">
+                            <label for="accountUploadDocName">Document Name/Description</label>
+                            <input type="text"
+                                   name="accountUploadDocName"
+                                   id="accountUploadDocName"
+                                   class="form-control"
+                                   ng-model="pcc.accounting.upload.docName"
+                                   required
+                                   ng-click="pcc.resetErrors()" />
+                            <span ng-show="form.accountUploadDocName.$dirty && form.accountUploadDocName.$error.required" class="help-block">Document name is required</span>
+                        </div>
 
-                </form>
+                        <div class="form-group" ng-class="{ 'has-error': form.accountUploadGroup.$dirty && form.accountUploadGroup.$error.required }">
+                            <label for="accountUploadGroup">Group Name (e.g. 2016/17)</label>
+                            <input type="text"
+                                   name="accountUploadGroup"
+                                   id="accountUploadGroup"
+                                   class="form-control"
+                                   ng-model="pcc.account.upload.group"
+                                   required
+                                   ng-click="pcc.resetErrors()" />
+                            <span ng-show="form.accountUploadGroup.$dirty && form.accountUploadGroup.$error.required" class="help-block">Group name is required</span>
+                        </div>
+
+                        <div class="form-group" ng-class="{ 'has-error': form.accountUploadDocType.$dirty && form.accountUploadDocType.$error.required }">
+                            <label for="accountUploadDocType">Document Type</label>
+                            <select name="accountUploadDocType"
+                                    id="accountUploadDocType"
+                                    class="form-control"
+                                    ng-model="pcc.account.upload.docType"
+                                    required
+                                    ng-click="pcc.resetErrors()"
+                                    ng-options="dt as dt.description for dt in pcc.accounting.docTypeOptions track by dt.documentType"></select>
+                            <span ng-show="form.accountUploadDocType.$dirty && form.accountUploadDocType.$error.required" class="help-block">Document Type is required</span>
+                        </div>
+
+                        <div class="form-actions">
+                            <button ng-disabled="form.$invalid || pcc.dataLoading" class="btn btn-sm btn-default pc-btn-link" ngf-select="pcc.accountDocUpload($file)">
+                                Upload Document <i class="material-icons">file_upload</i>
+                            </button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex-container-row primary-border">
+            <div class="primary-body">
+                <a><img src="/web/img/getAdobe.png" width="140px" height="40px"></a>
             </div>
         </div>
 
