--- a/public/features/history/history.html
+++ b/public/features/history/history.html
@@ -1,6 +1,6 @@
-<page-loader
+<page-tabs class="pt-bg"
         heading="hc.title"
         subheading="hc.subtitle"
         feature="hc.feature"
         pages="hc.pages">
-</page-loader>
+</page-tabs>
