--- a/public/features/page-tabs/page-tabs.html
+++ b/public/features/page-tabs/page-tabs.html
@@ -14,4 +14,4 @@
             </ul>
         </div>
     </div>
-    <div ng-include=pl.pageURL></div>
+    <div class="stnd-bg" ng-include=pl.pageURL></div>
