--- a/public/features/parish-council/parish-council.html
+++ b/public/features/parish-council/parish-council.html
@@ -1,6 +1,6 @@
-<page-loader
+<page-tabs
         heading="pcc.title"
         subheading="pcc.subtitle"
         feature="pcc.feature"
         pages="pcc.pages">
-</page-loader>
+</page-tabs>
