Document uploader fixes. APIs for documents

--- a/public/features/navbar/navbar-button.html
+++ b/public/features/navbar/navbar-button.html
@@ -1,5 +1,5 @@
 <div class="sec-nav-btn"
-     ng-style="{'background-image': 'url({{snb.image}})'}"
+     ng-style="{'background-image': 'url({{snb.image}})', 'background-color': '{{snb.bgcolour}}' }"
      ng-click="snb.redirect(snb.link)"
      ng-mouseover="snb.showHdr()"
      ng-mouseleave="snb.hideHdr()">
