--- a/public/features/navbar/navbar.html
+++ b/public/features/navbar/navbar.html
@@ -5,7 +5,8 @@
                 title="{{link.title}}"
                 image="{{link.image}}"
                 text="{{link.text}}"
-                link="{{link.link}}">
+                link="{{link.link}}"
+                bgcolour="{{link.bgcolour}}">
         </navbar-button>
     </div>
     <div>
